<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csabadobai.treasurehunt.ui.activities.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:labelFor="@+id/usernameView"
        android:text="@string/username_view_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        style="@style/Widget.AppCompat.EditText"
        android:id="@+id/usernameView"
        android:hint="@string/username_hint"
        android:textAlignment="center"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:labelFor="@+id/passwordView"
        android:text="@string/password_view_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/passwordView"
        android:hint="@string/password_hint"
        android:textAlignment="center"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/signInView"
            android:text="@string/sign_in_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/signUpView"
            android:text="@string/sign_up_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/rememberMeView"
        android:text="@string/remember_me_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/consoleView"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
